--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.7",
     "chart.js": "^4.4.0",
     "colorthief": "^2.4.0",
+    "firebase": "^10.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
